# cashonize-wallet

./: .eslintrc.cjs  .gitignore  .npmrc  CLAUDE.md  README.md  development.md  env.d.ts  eslint.config.js  eslint.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.js  quasar.config.js  quasar.config.ts  security-considerations.md  tsconfig.json  vitest.browser.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: walletconnect-cancellation.md
patches/: @wizardconnect__wallet@0.2.2.patch
public/: manifest.json
public/icons/: site.webmanifest
src/: env.d.ts  queryChainGraph.ts  shims.d.ts
src-capacitor/: capacitor.config.json  capacitor.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
src-capacitor/android/: capacitor.settings.gradle
src-electron/: electron-env.d.ts  electron-main.ts  electron-preload.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
src-electron/icons/: icon.icns
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  prevent-default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/boot/: deepLinking.ts  i18n.ts  plausible.ts  qrCodeComponent.ts  tauriWindow.ts
src/components/: addWallet.vue  alertDialog.vue  backupWallet.vue  bchWallet.vue  cashConnect.vue  connectDapp.vue  createTokens.vue  myTokens.vue  newWallet.vue  nftChild.vue  nftItem.vue  seedPhraseInput.vue  settingsMenu.vue  sweepPrivateKey.vue  tokenItem.vue  tokenItemFT.vue  tokenItemNFT.vue  txHistory.vue  (+4 more)
test/: bip21.test.ts  csvUtils.test.ts  extensions.test.ts  nftParsing.test.ts  setup.ts  store.navigation.test.ts  store.race.test.ts  store.switchWallet.test.ts  utils.test.ts  walletUtils.test.ts  wcSigning.test.ts  wizSigning.test.ts  wizValidation.test.ts
(+129 files in other folders)
